Use share group tracing ID for renderbuffer memory dump

We previously used client id. This is not guaranteed to be unique. Use
the share group tracing ID instead.

BUG=661436
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2473983003
Cr-Commit-Position: refs/heads/master@{#430058}

Former-commit-id: b03ea3889fdf345f5042a3112e2585266a951ebe